--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Mathieu Lamaziere's profile</title>
 	<meta name="description" content="This is the profile of Mathieu">
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Lora:400,700 Roboto:300,400,500,700,900" rel="stylesheet"
+	<link href="https://fonts.googleapis.com/css?family=Lora:400,700 Roboto:300,400,500,700,900" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -21,7 +21,7 @@
 
 <div class = "container" id="introduction">
 	<h1>Hello, I'm Mathieu</h1>
-<img src="Images/profile.png" class="img-circle" alt="Mathieu Lamaziere">
+<img src="images/profile.png" class="img-circle" alt="Mathieu Lamaziere">
 <p>
 	I love fencing, guitare and work out. I am at EMLV school. 
 </p>
@@ -53,13 +53,13 @@
 	<h2>Follow me</h2>
 <ul class="list inline">
 	<li>
-		<a href="https://www.facebook.com/" target="_blank">
+		<a href="https://www.facebook.com/" target="_blank">Facebook<a\>
 	</li>
 	<li>
-		<a href="https://www.tiktok.com/foryou?is_copy_url=1&is_from_webapp=v1" target="_blank">
+		<a href="https://www.tiktok.com/foryou?is_copy_url=1&is_from_webapp=v1" target="_blank">Tik Tok<a\>
 	</li>
 	<li>
-		<a href="https://www.instagram.com/?next=%2F" target="_blank">
+		<a href="https://www.instagram.com/?next=%2F" target="_blank">Instagram<a\>
 	</li>
 </ul>
 
